refactor: replace author by team

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,8 +8,8 @@
     "logo": "/images/logo.png",
     "logo_darkmode": "/images/logo-darkmode.png",
     "logo_width": "150",
-    "logo_height": "27",
-    "logo_text": "Nextplate"
+    "logo_height": "61",
+    "logo_text": "ilanov"
   },
 
   "settings": {
