--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@react-three/drei": "^9.97.6",
     "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
     "framer-motion-3d": "^11.0.5",
@@ -31,6 +33,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
