--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.97.6",
     "@react-three/fiber": "^8.15.16",
