--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion-3d": "^11.0.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.12.5",
     "marked": "^11.2.0",
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
